      stanza is also UNRELEASED and, if so, merge them (assuming the 
      "changelog" release heuristic is in use) (Closes: #458130)
    + Add non-maintainer uploads (including security and QA uploads),
      backports and the use of local version strings to the list of
      cases where debchange doesn't have to guess the user's intentions
  * checkbashisms:
    + Use Getopt::Long for option parsing
    + Add an option to force checking of scripts that would normally be
      skipped (Closes: #469023)
    + Clarify in the manpage that some issues detected by the script may
      be XSIisms etc rather than strictly bash-specific features
    + Add checks for suspend, caller, complete/compgen, declare/typeset,
      disown, builtin, set -[BHT], alias -p, unalias -a, local with
      options or an assigned value and $BASH(_*). Thanks to Raphael
      Geissert for the patch (Closes: #469050)
    + Modify each of the simple shell variable tests (e.g. $RANDOM) to
      also match ${variable}
    + Identify and ignore multi-line quoted text (Closes: #464641)
    + Reorder a couple of checks so that ". foo $HOSTNAME" is detected as
      source passing arguments rather than misuse of $HOSTNAME
    + Fix a potential false positive on "2>& 1"
    + Fix an unescaped hyphen in the manpage
    + Add a check for function names containing characters other than
      alphanumerics and underscore
    + Modify the "read without variable" test to also catch options other
      than -r. Thanks Luca Capello (Closes: #470696)
    + Add an option to allow flagging of lines which do not contain bashisms
      but which may contain other useful information - for example, checking
      whether $BASH is set before using bashisms or $RANDOM being used as a
      local variable rather than the bash built-in variable (Closes: #470999)
    + Add a check for "VAR+=foo" (Closes: #471001)
  * bts:
    + Allow the sendmail command to begin with a ~ (Closes: #469207)