@@ -100,9 +100,9 @@ rename it if the (upstream) version number changes.  This can be
 prevented by using the \fB\-\-preserve\fR command line or
 configuration file option as described below.
 .PP
-If \fB\-\-force\-bad\-version\fR is used, debchange will not stop if
-the new version is less than the current one.  This is especially
-useful while doing backports. 
+If \fB\-\-force\-bad\-version\fR or \fB\-\-allow\-lower\-version\fR is used,
+debchange will not stop if the new version is less than the current one.
+This is especially useful while doing backports. 
 .SH "Directory name checking"
 In common with several other scripts in the \fBdevscripts\fR package,
 \fBdebchange\fR will climb the directory tree until it finds a
@@ -216,6 +216,10 @@ and add a backport upload changelog comment.
 .BR \-\-force\-bad\-version ", " \-b
 Force a version number to be less than the current one (e.g., when
 backporting).
+.TP
+.BR \-\-allow\-lower\-version
+Allow a version number to be less than the current one if the new version
+matches the specified pattern.
 .TP
 .BR \-\-force\-distribution
 Force the provided distribution to be used, even if it doesn't match the list of known 
@@ -360,6 +364,10 @@ If this is set to \fIno\fR, then it is the same as the
 .BR DEBCHANGE_TZ
 Use this timezone for changelog entries.  Default is the user/system
 timezone as shown by `date \-R`.
+.TP
+.BR DEBCHANGE_LOWER_VERSION_PATTERN
+If this is set, then it is the same as the
+\fB\-\-allow\-lower\-version command line parameter being used.
 .SH ENVIRONMENT
 .TP
 .BR DEBEMAIL ", " EMAIL ", " DEBFULLNAME ", " NAME
